force-app/main/default/objects/Diagnostic_Request__c/Diagnostic_Request__c.object-meta.xml
<CustomObject>
    <label>Diagnostic Request</label>
    <nameField>
        <displayFormat>DR-{000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diagnostic Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>