force-app/main/default/objects/Diagnostic_Request__c/fields/Analysis_Results__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Results__c</fullName>
    <label>Analysis Results</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>