force-app/main/default/objects/Diagnostic_Request__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Validation Error</fullName>
            </value>
            <value>
                <fullName>Permission Issue</fullName>
            </value>
            <value>
                <fullName>Automation Failure</fullName>
            </value>
            <value>
                <fullName>Integration Error</fullName>
            </value>
            <value>
                <fullName>Metadata Mismatch</fullName>
            </value>
            <value>
                <fullName>Data Quality</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>