force-app/main/default/objects/Diagnostic_Request__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <externalId>true</externalId>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>