force-app/main/default/objects/Diagnostic_Request__c/fields/Target_User__c.field-meta.xml
<CustomField>
    <fullName>Target_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Diagnostic_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>