force-app/main/default/objects/Diagnostic_Request__c/fields/Warnings_Found__c.field-meta.xml
<CustomField>
    <fullName>Warnings_Found__c</fullName>
    <label>Warnings Found</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>